--- a/templates/Organick.html
+++ b/templates/Organick.html
@@ -11,7 +11,7 @@
                 healthier way <br>
                 of life
             </h1>
-            <button type="button" class="header-content-button">Explore Now <img src="{{ url_for('static', filename='img/main/aerrow.png')}}" alt=""></button>
+            <button type="button" class="header-content-button">Explore Now <img src="{{ url_for('static', filename='img/main/aerrow.png')}}" alt="" class="page-blog-aerrow"></button>
         </div>
     </div>
 </div>
